; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_bus_space_rmi_pci.c_rmi_pci_bus_space_read_multi_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_bus_space_rmi_pci.c_rmi_pci_bus_space_read_multi_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i64, i32*, i64)* @rmi_pci_bus_space_read_multi_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rmi_pci_bus_space_read_multi_1(i8* %0, i64 %1, i64 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i64 %4, i64* %10, align 8
  br label %11

11:                                               ; preds = %15, %5
  %12 = load i64, i64* %10, align 8
  %13 = add i64 %12, -1
  store i64 %13, i64* %10, align 8
  %14 = icmp ne i64 %12, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %11
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %8, align 8
  %18 = add nsw i64 %16, %17
  %19 = inttoptr i64 %18 to i32*
  %20 = load volatile i32, i32* %19, align 4
  %21 = load i32*, i32** %9, align 8
  store i32 %20, i32* %21, align 4
  %22 = load i32*, i32** %9, align 8
  %23 = getelementptr inbounds i32, i32* %22, i32 1
  store i32* %23, i32** %9, align 8
  br label %11

24:                                               ; preds = %11
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
